Ver y agregar estudiantes

--- a/Notas/Notas.csproj
+++ b/Notas/Notas.csproj
@@ -394,6 +394,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\_LayoutTopNav.cshtml" />
+    <Content Include="Views\Estudiante\CrearEstudiante.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
