--- a/Notas/Notas.csproj
+++ b/Notas/Notas.csproj
@@ -200,18 +200,16 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\EvaluacionController.cs" />
     <Compile Include="Controllers\EstudianteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\CursoModel.cs">
-      <DependentUpon>NotasModels.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\EstudianteModel.cs">
       <DependentUpon>NotasModels.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\LlevaModel.cs">
+    <Compile Include="Models\EvaluacionModel.cs">
       <DependentUpon>NotasModels.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\NotasModels.Context.cs">
@@ -229,7 +227,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>NotasModels.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\RequieredAttribute.cs" />
+    <Compile Include="Models\TieneModel.cs">
+      <DependentUpon>NotasModels.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EvaluacionService.cs" />
     <Compile Include="Services\EstudianteService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -395,9 +398,11 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\_LayoutTopNav.cshtml" />
     <Content Include="Views\Estudiante\CrearEstudiante.cshtml" />
+    <Content Include="Views\Curso.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Curso\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
