Modelos ya fijos sin entitty framework falta editar cada rubro y calcular nota final

--- a/Notas/Notas.csproj
+++ b/Notas/Notas.csproj
@@ -206,12 +206,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\EstudianteModel.cs">
-      <DependentUpon>NotasModels.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EvaluacionModel.cs">
-      <DependentUpon>NotasModels.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Models\EstudianteModel.cs" />
+    <Compile Include="Models\EvaluacionModel.cs" />
     <Compile Include="Models\FormularioModel.cs" />
     <Compile Include="Models\NotasModels.Context.cs">
       <AutoGen>True</AutoGen>
