--- a/Notas/Notas.csproj
+++ b/Notas/Notas.csproj
@@ -47,12 +47,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.1\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -209,25 +203,6 @@
     <Compile Include="Models\EstudianteModel.cs" />
     <Compile Include="Models\EvaluacionModel.cs" />
     <Compile Include="Models\FormularioModel.cs" />
-    <Compile Include="Models\NotasModels.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>NotasModels.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\NotasModels.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>NotasModels.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\NotasModels.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>NotasModels.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Models\RequieredAttribute.cs" />
-    <Compile Include="Models\TieneModel.cs">
-      <DependentUpon>NotasModels.tt</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EvaluacionService.cs" />
     <Compile Include="Services\EstudianteService.cs" />
@@ -244,24 +219,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\NotasModels.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>NotasModels.edmx</DependentUpon>
-      <LastGenOutput>NotasModels.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\NotasModels.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>NotasModels.edmx</DependentUpon>
-      <LastGenOutput>NotasModels.cs</LastGenOutput>
-    </Content>
     <Content Include="ClassDiagram1.cd" />
-    <EntityDeploy Include="Models\NotasModels.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>NotasModels.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\NotasModels.edmx.diagram">
-      <DependentUpon>NotasModels.edmx</DependentUpon>
-    </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -395,8 +353,9 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\_LayoutTopNav.cshtml" />
     <Content Include="Views\Estudiante\CrearEstudiante.cshtml" />
-    <Content Include="Views\Curso.cshtml" />
     <Content Include="Views\Evaluacion\VerEvaluacion.cshtml" />
+    <Content Include="Views\Evaluacion\EditarInvestigacion.cshtml" />
+    <Content Include="Views\Evaluacion\EditarParticipacion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -432,7 +391,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>56987</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:56987/</IISUrl>
+          <IISUrl>http://localhost:56987</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:56987/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
