Arreglos bugs. Faltan pruebas unitarias

--- a/Notas/Web.config
+++ b/Notas/Web.config
@@ -313,8 +313,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="NotasDBEntities" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=NotasDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" />
-    <add name="NotasDBEntities1" connectionString="metadata=res://*/Models.NotasModels.csdl|res://*/Models.NotasModels.ssdl|res://*/Models.NotasModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=NotasDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="NotasDBEntities" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=CursoDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
