--- a/Notas.Tests/Notas.Tests.csproj
+++ b/Notas.Tests/Notas.Tests.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\EvaluacionControllerTest.cs" />
+    <Compile Include="Controllers\EstudianteControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
